--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -1,5 +1,5 @@
 ---
-const { variant, type = "button", ...rest } = Astro.props;
+const { variant, type = "button", href, ...rest } = Astro.props;
 
 const base = "rounded-4xl px-4 py-2 button cursor-pointer";
 
@@ -8,12 +8,18 @@ const variants = {
   light: "btn-light text-dark font-bold uppercase",
   dark: "btn-dark text-light font-bold uppercase",
 };
+
+const classes = `${base} ${variants[variant]} ${rest.class ?? ""}`;
 ---
 
-<button
-  type={type}
-  {...rest}
-  class={`${base} ${variants[variant]} ${rest.class ?? ""}`}
->
-  <slot />
-</button>
+{
+  href ? (
+    <a href={href} class={classes}>
+      <slot />
+    </a>
+  ) : (
+    <button type={type} {...rest} class={classes}>
+      <slot />
+    </button>
+  )
+}
