--- a/src/components/Stoetform.astro
+++ b/src/components/Stoetform.astro
@@ -6,7 +6,7 @@ import Button from "./Button.astro";
 <form x-data="{ step: 1 }">
   <div
     x-data="{ active: 'fast' }"
-    class="relative flex w-88.25 lg:w-96.75 rounded-full btn-light p-2"
+    class="relative flex w-80.25 lg:w-96.75 rounded-full btn-light p-2"
   >
     <!-- SLIDER -->
     <div
@@ -43,7 +43,7 @@ import Button from "./Button.astro";
       Månedligt beløb
     </Text>
 
-    <div class="flex flex-row gap-10 pb-md">
+    <div class="flex flex-row gap-7 pb-md">
       <!-- 75 kr -->
       <label class="flex items-center gap-5 cursor-pointer">
         <input
@@ -58,7 +58,9 @@ import Button from "./Button.astro";
       focus:ring-0 border-0"
         />
         <span
-          ><Text teksttype="formtekst" stylingclasses="text-dark">75 kr.</Text
+          ><Text
+            teksttype="formtekst"
+            stylingclasses="text-dark text-[12px] lg:text-base">75 kr.</Text
           ></span
         >
       </label>
@@ -77,7 +79,9 @@ import Button from "./Button.astro";
       focus:ring-0 border-0"
         />
         <span
-          ><Text teksttype="formtekst" stylingclasses="text-dark">100 kr.</Text
+          ><Text
+            teksttype="formtekst"
+            stylingclasses="text-dark text-[12px] lg:text-base">100 kr.</Text
           ></span
         >
       </label>
@@ -96,13 +100,16 @@ import Button from "./Button.astro";
       focus:ring-0 border-0"
         />
         <span
-          ><Text teksttype="formtekst" stylingclasses="text-dark">200 kr.</Text>
+          ><Text
+            teksttype="formtekst"
+            stylingclasses="text-dark text-[12px] lg:text-base">200 kr.</Text
+          >
         </span>
       </label>
     </div>
 
     <!-- INDTAST SELV BELØB -->
-    <div class="flex flex-col w-88.25 lg:w-96.75 pb-xl">
+    <div class="flex flex-col w-80.25 lg:w-96.75 pb-xl">
       <label for="selvvalgt"
         ><Text teksttype="formtekst" stylingclasses="text-dark text-base pb-xs"
           >Vælg selv et beløb:</Text
@@ -170,7 +177,7 @@ import Button from "./Button.astro";
     </div>
 
     <!-- Fulde navn -->
-    <div class="flex flex-col w-88.25 lg:w-96.75 pb-xl">
+    <div class="flex flex-col w-80.25 lg:w-96.75 pb-xl">
       <label for="selvvalgt"
         ><Text teksttype="formtekst" stylingclasses="text-dark text-base pb-xs"
           >Fulde navn</Text
