--- a/src/pages/bliv-frivillig.astro
+++ b/src/pages/bliv-frivillig.astro
@@ -17,7 +17,7 @@ import Heading from "../components/Heading.astro";
       <img
         src="frivillige.webp"
         alt="Billede af the red vans frivillige"
-        class="py-3xl md:col-start-2 md:col-end-4"
+        class="pb-3xl md:col-start-2 md:col-end-4"
       />
     </div>
 
