--- a/src/pages/artikler.astro
+++ b/src/pages/artikler.astro
@@ -6,7 +6,7 @@ import List from "../components/List.astro";
 
 <MainLayout title="Artikler">
   <div class="bg-greywhite px-gutter py-3xl md:px-2xl md:pt-4xl md:pb-4xl">
-    <div class="pb-3xl md:pb-6xl">
+    <div class="pb-3xl">
       <HeadingParagraf
         title="Artikler"
         text="Vi lægger vægt på, at sexarbejdere skal have de samme rettiheder og beskyttelse som andre arbejdstagere, og vi engagerer os i at skabe opmærksomhed omkring deres vilkår."
